New Build structure, adds component repository and allows bnd to be used

--- a/org.osgi.test.cases.permissionadmin.signature/build.properties
+++ b/org.osgi.test.cases.permissionadmin.signature/build.properties
@@ -10,8 +10,8 @@ sign.tb2.jar = true
 expand.tb2.jar = [${p}.tb2]
 expand.tb3.jar = [${p}.tb3]
 expand.tbc.jar = [${p}.tbc]
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar
