--- a/org.osgi.test.cases.policy/build.properties
+++ b/org.osgi.test.cases.policy/build.properties
@@ -6,6 +6,6 @@ expand.${p}.jar = ${p}
 expand.tb1.jar = [${p}.tb1.*]
 expand.tbc.jar = [${p}.tbc.*]
 expand.com.provider.messages.jar = [com.provider.messages.*]
-include.${p}.jar = tbc.jar, \
-				   www/com.provider.messages.jar=com.provider.messages.jar, \
-				   www/tb1.jar=tb1.jar
+include.${p}.jar = ${target-dir}/tbc.jar, \
+				   www/com.provider.messages.jar=${target-dir}/com.provider.messages.jar, \
+				   www/tb1.jar=${target-dir}/tb1.jar
