--- a/org.osgi.test.cases.provisioning/build.properties
+++ b/org.osgi.test.cases.provisioning/build.properties
@@ -15,22 +15,22 @@ expand.org.osgi.test.cases.provisioning.jar = org.osgi.test.cases.provisioning
 expand.simple.jar = org.osgi.test.cases.provisioning.simple
 expand.tbc.jar = org.osgi.test.cases.provisioning.tbc
 nomanifest = .ipa
-include.tbc.jar = 	org/osgi/test/cases/provisioning/tbc/simple.ipa=simple.ipa, \
-	org/osgi/test/cases/provisioning/tbc/ref.ipa=ref.ipa, \
+include.tbc.jar = 	org/osgi/test/cases/provisioning/tbc/simple.ipa=${target-dir}/simple.ipa, \
+	org/osgi/test/cases/provisioning/tbc/ref.ipa=${target-dir}/ref.ipa, \
 	org/osgi/test/cases/provisioning/tbc/osgi.cert=osgi.cert, \
-	org/osgi/test/cases/provisioning/tbc/case-ref.ipa=case-ref.ipa, \
-	org/osgi/test/cases/provisioning/tbc/delay-ref.ipa=delay-ref.ipa, \
-	org/osgi/test/cases/provisioning/tbc/spid.ipa=spid.ipa, \
-	org/osgi/test/cases/provisioning/tbc/ipa-ref-start.ipa=ipa-ref-start.ipa, \
-	org/osgi/test/cases/provisioning/tbc/ipa-ref.ipa=ipa-ref.ipa, \
-	org/osgi/test/cases/provisioning/tbc/keys-only.ipa=keys-only.ipa, \
-	org/osgi/test/cases/provisioning/tbc/unicode.ipa=unicode.ipa
-include.org.osgi.test.cases.provisioning.jar = tbc.jar, \
+	org/osgi/test/cases/provisioning/tbc/case-ref.ipa=${target-dir}/case-ref.ipa, \
+	org/osgi/test/cases/provisioning/tbc/delay-ref.ipa=${target-dir}/delay-ref.ipa, \
+	org/osgi/test/cases/provisioning/tbc/spid.ipa=${target-dir}/spid.ipa, \
+	org/osgi/test/cases/provisioning/tbc/ipa-ref-start.ipa=${target-dir}/ipa-ref-start.ipa, \
+	org/osgi/test/cases/provisioning/tbc/ipa-ref.ipa=${target-dir}/ipa-ref.ipa, \
+	org/osgi/test/cases/provisioning/tbc/keys-only.ipa=${target-dir}/keys-only.ipa, \
+	org/osgi/test/cases/provisioning/tbc/unicode.ipa=${target-dir}/unicode.ipa
+include.org.osgi.test.cases.provisioning.jar = ${target-dir}/tbc.jar, \
     log.ref, \
-	www/simple.ipa=simple.ipa, \
-	www/test-1.jar=simple.jar, \
-	www/delay.jar=simple.jar, \
-	www/simple.jar=simple.jar
+	www/simple.ipa=${target-dir}/simple.ipa, \
+	www/test-1.jar=${target-dir}/simple.jar, \
+	www/delay.jar=${target-dir}/simple.jar, \
+	www/simple.jar=${target-dir}/simple.jar
 
 #
 # All bundles and texts are contained in the
@@ -38,8 +38,8 @@ include.org.osgi.test.cases.provisioning.jar = tbc.jar, \
 #
 ipa.simple.ipa	= text simple.ipa true, \
 	text load-status simple.ipa, \
-	bundle test-0-prov.jar simple.jar, \
-	bundle test-1-prov.jar simple.jar, \
+	bundle test-0-prov.jar ${target-dir}/simple.jar, \
+	bundle test-1-prov.jar ${target-dir}/simple.jar, \
 	bundle-url test-2-prov.jar http://NON_EXISTENT_HOST/NON_EXISTENT_FILE, \
 	text provisioning.start.bundle test-0-prov.jar, \
 	text text-1 TEST1, \
@@ -54,7 +54,7 @@ ipa.simple.ipa	= text simple.ipa true, \
 # 
 ipa.ref.ipa : text ref.ipa true, \
 	text load-status ref.ipa, \
-	bundle test-0-prov.jar simple.jar, \
+	bundle test-0-prov.jar ${target-dir}/simple.jar, \
 	[test-1-prov.jar director:simple.jar text/x-osgi-bundle-url], \
 	bundle-url test-2-prov.jar http://NON_EXISTENT_HOST/NON_EXISTENT_FILE, \
 	text provisioning.start.bundle test-0-prov.jar, \
@@ -109,7 +109,7 @@ ipa.ipa-ref.ipa : text ipa-ref.ipa true, \
 #
 ipa.ipa-ref-start.ipa = text ipa-ref-start.ipa true, \
 	text load-status ipa-ref-start.ipa, \
-	bundle local-prov.jar simple.jar, \
+	bundle local-prov.jar ${target-dir}/simple.jar, \
 	text provisioning.reference director:simple.ipa, \
 	text provisioning.start.bundle local-prov.jar
 
