--- a/org.osgi.test.cases.signature/build.properties
+++ b/org.osgi.test.cases.signature/build.properties
@@ -19,10 +19,10 @@ expand.tbc.test.jar = ${p}.tbc, [i.am.absent], [org.osgi.framework]
 expand.tbc.core.jar = ${p}.tbc, ${replace;${core.specs};.+;[$0]}
 expand.tbc.cmpn.jar = ${p}.tbc, ${replace;${cmpn.specs};.+;[$0]}
 expand.tbc.mobile.jar = ${p}.tbc, ${replace;${mobile.specs};.+;[$0]}
-include.${p}.core.jar = tbc.jar=tbc.core.jar
-include.${p}.cmpn.jar = tbc.jar=tbc.cmpn.jar
-include.${p}.mobile.jar = tbc.jar=tbc.mobile.jar
-include.${p}.test.jar = tbc.jar=tbc.test.jar
+include.${p}.core.jar = tbc.jar=${target-dir}/tbc.core.jar
+include.${p}.cmpn.jar = tbc.jar=${target-dir}/tbc.cmpn.jar
+include.${p}.mobile.jar = tbc.jar=${target-dir}/tbc.mobile.jar
+include.${p}.test.jar = tbc.jar=${target-dir}/tbc.test.jar
 
 expand.${p}.dmtree.jar = ${p}
 expand.tbc.dmtree.jar = ${p}.tbc, [info.dmtree], \
@@ -31,4 +31,4 @@ expand.tbc.dmtree.jar = ${p}.tbc, [info.dmtree], \
   [info.dmtree.registry], \
   [info.dmtree.security], \
   [info.dmtree.spi]
-include.${p}.dmtree.jar = tbc.jar=tbc.dmtree.jar
+include.${p}.dmtree.jar = tbc.jar=${target-dir}/tbc.dmtree.jar
