--- a/org.osgi.test.cases.useradmin/build.properties
+++ b/org.osgi.test.cases.useradmin/build.properties
@@ -3,5 +3,5 @@ jars.compile.order = tbc.jar \
 bin.includes = org.osgi.test.cases.useradmin.jar
 expand.org.osgi.test.cases.useradmin.jar = org.osgi.test.cases.useradmin
 expand.tbc.jar = org.osgi.test.cases.useradmin.tbc.*
-include.org.osgi.test.cases.useradmin.jar = tbc.jar, \
+include.org.osgi.test.cases.useradmin.jar = ${target-dir}/tbc.jar, \
 	log.ref
