--- a/org.osgi.test.cases.wireadmin/build.properties
+++ b/org.osgi.test.cases.wireadmin/build.properties
@@ -17,12 +17,12 @@ expand.tb4.jar = org.osgi.test.cases.wireadmin.tb4
 expand.tb5.jar = org.osgi.test.cases.wireadmin.tb5
 expand.tb6.jar = org.osgi.test.cases.wireadmin.tb6
 expand.tb7.jar = org.osgi.test.cases.wireadmin.tb7
-include.org.osgi.test.cases.wireadmin.jar = tbc.jar, \
+include.org.osgi.test.cases.wireadmin.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb6.jar=tb6.jar, \
-	www/tb7.jar=tb7.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb6.jar=${target-dir}/tb6.jar, \
+	www/tb7.jar=${target-dir}/tb7.jar
