--- a/org.osgi.test.cases.xml/build.properties
+++ b/org.osgi.test.cases.xml/build.properties
@@ -13,8 +13,8 @@ include.tb1.jar = META-INF/services/javax.xml.parsers.SAXParserFactory=src/org/o
 include.tb2.jar = META-INF/services/javax.xml.parsers.DocumentBuilderFactory=src/org/osgi/test/cases/xml/tb2/javax.xml.parsers.DocumentBuilderFactory
 include.tb3.jar = META-INF/services/javax.xml.parsers.SAXParserFactory=src/org/osgi/test/cases/xml/tb3/javax.xml.parsers.SAXParserFactory, \
   META-INF/services/javax.xml.parsers.DocumentBuilderFactory=src/org/osgi/test/cases/xml/tb3/javax.xml.parsers.DocumentBuilderFactory
-include.org.osgi.test.cases.xml.jar = tbc.jar, \
+include.org.osgi.test.cases.xml.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar
