--- a/org.osgi.test.cases.position/build.properties
+++ b/org.osgi.test.cases.position/build.properties
@@ -3,4 +3,4 @@ jars.compile.order = tbc.jar,\
                      org.osgi.test.cases.position.jar
 expand.org.osgi.test.cases.position.jar = org.osgi.test.cases.position
 expand.tbc.jar = org.osgi.test.cases.position.tbc
-include.org.osgi.test.cases.position.jar = tbc.jar, log.ref
+include.org.osgi.test.cases.position.jar = ${target-dir}/tbc.jar, log.ref
