--- a/org.osgi.test.cases.prefs/build.properties
+++ b/org.osgi.test.cases.prefs/build.properties
@@ -3,5 +3,5 @@ jars.compile.order = tbc.jar, \
                      org.osgi.test.cases.prefs.jar
 expand.org.osgi.test.cases.prefs.jar = org.osgi.test.cases.prefs
 expand.tbc.jar = org.osgi.test.cases.prefs.tbc
-include.org.osgi.test.cases.prefs.jar = tbc.jar, log.ref
+include.org.osgi.test.cases.prefs.jar = ${target-dir}/tbc.jar, log.ref
  
