--- a/org.osgi.test.cases.startlevel/build.properties
+++ b/org.osgi.test.cases.startlevel/build.properties
@@ -12,11 +12,11 @@ expand.tb2.jar = org.osgi.test.cases.startlevel.tb2
 expand.tb3.jar = org.osgi.test.cases.startlevel.tb3
 expand.tb4.jar = org.osgi.test.cases.startlevel.tb4
 expand.tb5.jar = org.osgi.test.cases.startlevel.tb5
-include.org.osgi.test.cases.startlevel.jar = tbc.jar, \
+include.org.osgi.test.cases.startlevel.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar
 version=1.3
