--- a/org.osgi.test.cases.testtool/build.properties
+++ b/org.osgi.test.cases.testtool/build.properties
@@ -4,6 +4,6 @@ jars.compile.order = tbc.jar, \
 expand.${p}.jar = ${p}
 expand.tb1.jar = ${p}.tb1
 expand.tbc.jar = [${p}.tbc]
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar
+	www/tb1.jar=${target-dir}/tb1.jar
