--- a/org.osgi.test.cases.tracker/build.properties
+++ b/org.osgi.test.cases.tracker/build.properties
@@ -10,9 +10,9 @@ expand.tb1.jar = ${p}.tb1
 expand.tb2.jar = ${p}.tb2
 expand.tb3.jar = ${p}.tb3
 expand.tb4.jar = ${p}.tb4
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar
