--- a/org.osgi.test.cases.upnp/build.properties
+++ b/org.osgi.test.cases.upnp/build.properties
@@ -3,5 +3,5 @@ jars.compile.order = tbc.jar \
 bin.includes=org.osgi.test.cases.upnp.jar
 expand.org.osgi.test.cases.upnp.jar = org.osgi.test.cases.upnp
 expand.tbc.jar = org.osgi.test.cases.upnp.tbc.*
-include.org.osgi.test.cases.upnp.jar = tbc.jar, \
+include.org.osgi.test.cases.upnp.jar = ${target-dir}/tbc.jar, \
 	log.ref
