--- a/org.osgi.test.cases.url/build.properties
+++ b/org.osgi.test.cases.url/build.properties
@@ -3,5 +3,5 @@ jars.compile.order = tbc.jar \
 bin.includes=org.osgi.test.cases.url.jar
 expand.org.osgi.test.cases.url.jar = org.osgi.test.cases.url
 expand.tbc.jar = org.osgi.test.cases.url.tbc.*
-include.org.osgi.test.cases.url.jar = tbc.jar, \
+include.org.osgi.test.cases.url.jar = ${target-dir}/tbc.jar, \
 	log.ref
