--- a/r4.mobile/osgi.test/build.properties
+++ b/r4.mobile/osgi.test/build.properties
@@ -13,9 +13,7 @@ jars.compile.order = \
   osgi.develop.zip, \
   osgi.ri-tck.zip, \
   osgi.mobile.tck.zip, \
-  osgi.mobile.ri.zip, \
-  osgi.mobile.tck.src.zip, \
-  osgi.mobile.ri.src.zip
+  osgi.mobile.ri.zip
 
 bin.includes = osgi.min.jar, \
   osgi.refimpl.jar, \
@@ -27,9 +25,7 @@ bin.includes = osgi.min.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
   osgi.develop.zip, \
-  osgi.ri-tck.zip, \
-  osgi.tck.zip, \
-  osgi.mobile.ri-tck.zip
+  osgi.ri-tck.zip
   
 
 prebuild =  org.osgi.impl.framework.eclipse, \
@@ -124,15 +120,15 @@ include.osgi.ri-tck.zip= \
  osgi.core.jar, \
  osgi.core.impls.jar, \
  osgi.core.tests.jar, \
- osgi.core.xml, \
+ doc/osgi.core.html, \
  osgi.cmpn.jar, \
  osgi.cmpn.impls.jar, \
  osgi.cmpn.tests.jar, \
- osgi.cmpn.xml, \
+ doc/osgi.cmpn.html, \
  osgi.mobile.jar, \
  osgi.mobile.impls.jar, \
  osgi.mobile.tests.jar, \
- osgi.mobile.xml
+ doc/osgi.mobile.html
 
 include.osgi.develop.zip = \
  [about.html=about-zip.html], \
@@ -165,9 +161,11 @@ crossref = core, cmpn, mobile
 # files create this subset. All these files can
 # be unzipped in the same directory
 #
-# Full TCK without RI
+# Full Mobile TCK without RI
 
-include.osgi.mobile.tck.zip= [about.html=about-zip.html], \
+include.osgi.mobile.tck.zip= \
+ [about.html=about-zip.html], \
+ LICENSE=LICENSE.jsr232.tck.txt, \
  NOTICE=NOTICE.txt, \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  target/build.xml=target/build.xml, \
@@ -176,6 +174,7 @@ include.osgi.mobile.tck.zip= [about.html=about-zip.html], \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
  director/osgi.properties=director/osgi.properties, \
+ testcond.jar, \
  osgi.min.jar, \
  osgi.target.jar, \
  org.osgi.impl.framework.eclipse.jar, \
@@ -189,29 +188,24 @@ include.osgi.mobile.tck.zip= [about.html=about-zip.html], \
  osgi.mobile.jar, \
  osgi.mobile.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
- doc/osgi.mobile.html=doc/osgi.mobile.html
+ doc/osgi.mobile.html=doc/osgi.mobile.html, \
+ ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ../org.osgi.test.cases.signature/src
 
 
 
-# RIs
+# Mobile RI
 include.osgi.mobile.ri.zip= \
+ [about.html=about-zip.html], \
+ LICENSE-RI=LICENSE.jsr232.ri.txt, \
+ NOTICE=NOTICE.txt, \
  org.osgi.impl.framework.eclipse.jar, \
  osgi.core.impls.jar, \
  osgi.mobile.impls.jar
 
-# RI Source 
-include.osgi.mobile.ri.src.zip= ${replace;${mobile.impls};.+;../$0/src} 
-
-# TCK Source
-# The signature test case is shared so we need to treat it special
-include.osgi.mobile.tck.src.zip=\
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
- ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
- ../org.osgi.test.cases.signature/src
- 
 btool.sources=false
 
 custom=true
 verbose=false
-
 
