--- a/org.osgi.impl.framework.eclipse/build.xml
+++ b/org.osgi.impl.framework.eclipse/build.xml
@@ -1,14 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="project" default="publish">
-	<import file="../build/build.xml" />
-
-	<!-- 
-	The implementation is supplied by Eclipse Equinox.
-	-->
-	<target name="init" depends="master.init">
-		<copy file="${workspace}/licensed/jar/org.eclipse.osgi.jar"
-		      tofile="${project}/${project.name}.jar"
-		      verbose="${verbose}"
-		      preservelastmodified="true" />
-	</target>
+	<import file="../cnf/build.xml" />
 </project>
