--- a/org.osgi.test.cases.activationpolicy/.classpath
+++ b/org.osgi.test.cases.activationpolicy/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry exported="true" kind="src" path="/org.osgi.service.event"/>
 	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar"/>
 	<classpathentry kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" sourcepath="/ee.minimum"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.internal.jar" sourcepath="/org.osgi.test.cases/src"/>
+	<classpathentry kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar" sourcepath="/org.osgi.test.cases/src"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
