--- a/org.osgi.test.cases.application/.classpath
+++ b/org.osgi.test.cases.application/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
 	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.internal.jar" sourcepath="/osgi.released/osgi.internal.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar" sourcepath="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.impl.bundle.midletcontainer"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
