--- a/org.osgi.test.cases.event/.classpath
+++ b/org.osgi.test.cases.event/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry exported="true" kind="src" path="/org.osgi.service.event"/>
 	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar"/>
 	<classpathentry sourcepath="/ee.minimum" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar"/>
-	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/osgi.released/osgi.internal.jar"/>
+	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
