Internal was still in the wrong place

--- a/org.osgi.test.tool/.classpath
+++ b/org.osgi.test.tool/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar" kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar"/>
 	<classpathentry sourcepath="/aQute.constructor/IFC11SRC.ZIP" kind="lib" path="/licensed/repo/netscape.ifc/netscape.ifc-1.1.0.jar"/>
 	<classpathentry kind="lib" path="/licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar"/>
-	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/osgi.released/osgi.internal.jar"/>
+	<classpathentry sourcepath="/org.osgi.test.cases/src" kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
