Added org.osgi.util.cdma for meg

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -36,6 +36,7 @@ specs = \
  org.osgi.service.url, \
  org.osgi.service.useradmin, \
  org.osgi.service.wireadmin, \
+ org.osgi.util.cdma, \
  org.osgi.util.gsm, \
  org.osgi.util.measurement, \
  org.osgi.util.mobile, \
