Made the framewlork a normal impl

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -44,15 +44,14 @@ specs = \
  org.osgi.util.tracker, \
  org.osgi.util.xml
 
-
-#  org.osgi.impl.service.application, \
  
 impls = \
   org.osgi.impl.bundle.autoconf, \
   org.osgi.impl.bundle.jaxp, \
   org.osgi.impl.bundle.rsh, \
-  org.osgi.impl.service.application, \
   org.osgi.impl.bundle.midletcontainer, \
+  org.osgi.impl.framework.eclipse, \
+  org.osgi.impl.service.application, \
   org.osgi.impl.service.cm, \
   org.osgi.impl.service.component, \
   org.osgi.impl.service.deploymentadmin, \
@@ -72,8 +71,6 @@ impls = \
   org.osgi.impl.service.upnp.cd, \
   org.osgi.impl.service.useradmin, \
   org.osgi.impl.service.wireadmin
-
-#  org.osgi.impl.service.power, \
 
 tests = \
   org.osgi.test.cases.activationpolicy, \
