--- a/org.osgi.tools/build.properties
+++ b/org.osgi.tools/build.properties
@@ -11,7 +11,6 @@ jars.compile.order = osgi.tools.jar, \
 bin.includes = osgi.tools.jar, \
   ${p}.console.jar, \
   cmcmd.jar, \
-  fileinstall.jar, \
   csv2xml.jar, \
   xml2mif.jar, \
   cmapps.jar, \
@@ -32,12 +31,9 @@ expand.osgi.tools.jar = ${p}.csv2xml, ${p}.jc, ${p}.xmldoclet, ${p}.jar2xml, \
   
 expand.xml2mif.jar = ${p}.xml2mif
   
-expand.${p}.console.jar = ${p}.console, \
+expand.org.osgi.tools.console.jar = ${p}.console, \
   [${p}.command], \
   [org.osgi.service.permissionadmin]
-bin.includes =  osgi.tools.jar, \
-  ${p}.console.jar, cmcmd.jar, fileinstall.jar, \
-  csv2xml.jar
 
 expand.cmcmd.jar = org.osgi.tools.cmadmin
 
