Removed JSR 291 and 232 builds, needs serious rework anyway

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -1,3 +1,9 @@
+nodeploy=true
+prebuild =  osgi, \
+  ${impls} , ${tests}, \
+  org.osgi.test.cases.testtool, \
+  org.osgi.test.tool, \
+  org.osgi.tools
 
 jars.compile.order = \
   osgi.min.jar, \
@@ -8,15 +14,10 @@ jars.compile.order = \
   osgi.cmpn.tests.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
-  osgi.ri-tck.zip, \
-  osgi.mobile.tck.zip, \
-  osgi.mobile.ri.zip, \
-  osgi.jsr291.tck.zip, \
-  osgi.jsr291.ri.zip
+  osgi.ri-tck.zip
 
 bin.includes = osgi.min.jar, \
   osgi.refimpl.jar, \
-  org.osgi.impl.framework.eclipse.jar, \
   osgi.core.tests.jar,  \
   osgi.core.impls.jar, \
   osgi.cmpn.impls.jar, \
@@ -26,12 +27,6 @@ bin.includes = osgi.min.jar, \
   osgi.ri-tck.zip
   
 
-prebuild =  osgi, \
-  org.osgi.impl.framework.eclipse, \
-  ${impls} , ${tests}, \
-  org.osgi.test.cases.testtool, \
-  org.osgi.test.tool, \
-  org.osgi.tools
 
 # Used to run the director in a minimum OSGi framework
 include.osgi.min.jar = \
@@ -48,7 +43,7 @@ expand.osgi.min.jar = org.osgi.tools.group, \
 
 # Refimpl. Temporary until we do Mobile
 include.osgi.refimpl.jar = ${replace;${impls};(.+);${target-dir}/$1.jar}, \
- apache/servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
+ apache/servlet.jar=generated/servlet.jar, \
  apache/LICENSE=../licensed/licenses/ASL-2.0.txt, \
  NOTICE=NOTICE.txt, \
  about.html
@@ -57,18 +52,18 @@ expand.osgi.refimpl.jar = org.osgi.tools.group, \
 
  
 # Core
-core.impls.jars=${replace;${core.impls};(.+)$;{target-dir}/$1.jar}
-core.tests.jars=${replace;${core.tests};(.+)$;${target-dir}/$1.jar}
+core.impls.jars=${replace;${core.impls};(.+);$1.jar}
+core.tests.jars=${replace;${core.tests};(.+);$1.jar}
 include.osgi.core.impls.jar = ${replace;${core.impls};(.+);${target-dir}/$1.jar}
 expand.osgi.core.impls.jar = org.osgi.tools.group
 include.osgi.core.tests.jar = ${replace;${core.tests};(.+);${target-dir}/$1.jar}
 expand.osgi.core.tests.jar = org.osgi.tools.group
 
 # Compendium
-cmpn.impls.jars=${replace;${cmpn.impls};(.+);${target-dir}/$1.jar}
-cmpn.tests.jars=${replace;${cmpn.tests};(.+);${target-dir}/$1.jar}
+cmpn.impls.jars=${replace;${cmpn.impls};(.+);$1.jar}
+cmpn.tests.jars=${replace;${cmpn.tests};(.+);$1.jar}
 include.osgi.cmpn.impls.jar = ${replace;${cmpn.impls};(.+);${target-dir}/$1.jar}, \
- apache/servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
+ apache/servlet.jar=generated/servlet.jar, \
  apache/LICENSE=../licensed/licenses/ASL-2.0.txt, \
  NOTICE=NOTICE.txt, \
  about.html
@@ -79,8 +74,8 @@ expand.osgi.cmpn.tests.jar = org.osgi.tools.group
 
 
 # Mobile
-mobile.impls.jars=${replace;${mobile.impls};(.+);${target-dir}/$1.jar}
-mobile.tests.jars=${replace;${mobile.tests};(.+);${target-dir}/$1.jar}
+mobile.impls.jars=${replace;${mobile.impls};(.+);$1.jar}
+mobile.tests.jars=${replace;${mobile.tests};(.+);$1.jar}
 include.osgi.mobile.impls.jar = ${replace;${mobile.impls};(.+);${target-dir}/$1.jar}
 expand.osgi.mobile.impls.jar = org.osgi.tools.group, \
  [javax.microedition.io], [javax.microedition.pki]
@@ -94,28 +89,17 @@ include.osgi.ri-tck.zip= \
  [about.html=about-zip.html], \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  NOTICE=NOTICE.txt, \
- build.xml=build.xml, \
- target/configuration/config.ini=target/configuration/config.ini, \
- target/policy=target/policy, \
- target/keystore=target/keystore, \
- target/delivered=target/delivered, \
- director/build.xml=director/build.xml, \
- director/cmpn.script=director/cmpn.script, \
- director/core.script=director/core.script, \
- director/mobile.script=director/mobile.script, \
- director/link.script=director/link.script, \
- director/Director.launch=director/Director.launch, \
- director/configuration/config.ini=director/configuration/config.ini, \
- director/test.properties=director/test.properties, \
+ target=target, \
+ director=director, \
+ ${target-dir}/osgi.jar, \
+ ${target-dir}/servlet.jar, \
  ${target-dir}/osgi.min.jar, \
- servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
  ${target-dir}/osgi.target.jar, \
+ ${target-dir}/osgi.director.jar, \
  ${target-dir}/testcond.jar, \
  ${target-dir}/org.osgi.test.cases.testtool.jar, \
  ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
- ${target-dir}/osgi.jar, \
  ${target-dir}/org.osgi.tools.console.jar, \
- ${target-dir}/osgi.director.jar, \
  ${target-dir}/osgi.core.jar, \
  ${target-dir}/osgi.core.impls.jar, \
  ${target-dir}/osgi.core.tests.jar, \
@@ -132,96 +116,6 @@ include.osgi.ri-tck.zip= \
 
 crossref = core, cmpn, mobile
 
-#
-# Mobile subset
-# For JSR 232 we need a subset. The following 
-# files create this subset. All these files can
-# be unzipped in the same directory
-#
-# Full Mobile TCK without RI
-
-include.osgi.mobile.tck.zip= \
- [about.html=about-zip.html], \
- LICENSE=LICENSE.jsr232.tck.txt, \
- NOTICE=NOTICE.txt, \
- doc/tck-manual.pdf=doc/tck-manual.pdf, \
- build.xml=build.xml, \
- target/configuration/config.ini=target/configuration/config.ini, \
- target/policy=target/policy, \
- target/keystore=target/keystore, \
- director/build.xml=director/build.xml, \
- director/configuration/config.ini=director/configuration/config.ini, \
- ${target-dir}/testcond.jar, \
- ${target-dir}/osgi.min.jar, \
- servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
- ${target-dir}/osgi.target.jar, \
- ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
- ${target-dir}/osgi.jar, \
- ${target-dir}/osgi.director.jar, \
- target/delivered=target/delivered, \
- director/core.script=director/core.script, \
- director/mobile.script=director/mobile.script, \
- ${target-dir}/osgi.core.jar, \
- ${target-dir}/osgi.core.tests.jar, \
- ${target-dir}/osgi.mobile.jar, \
- ${target-dir}/osgi.mobile.tests.jar, \
- doc/osgi.core.html=doc/osgi.core.html, \
- doc/osgi.mobile.html=doc/osgi.mobile.html, \
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
- ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
- ../org.osgi.test.cases.signature/src
-
-
-
-# Mobile RI
-include.osgi.mobile.ri.zip= \
- [about.html=about-zip.html], \
- LICENSE-RI=LICENSE.jsr232.ri.txt, \
- NOTICE=NOTICE.txt, \
- ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
- ${target-dir}/osgi.core.impls.jar, \
- ${target-dir}/osgi.mobile.impls.jar
-
-# Core (JSR 291) TCK
-# For JSR 291 we need a subset. The following 
-# files create this subset. All these files can
-# be unzipped in the same directory
-
-include.osgi.jsr291.tck.zip= \
- [about.html=about-zip.html], \
- LICENSE=LICENSE.jsr291.tck.txt, \
- NOTICE=NOTICE.txt, \
- doc/tck-manual.pdf=doc/tck-manual.pdf, \
- target/build.xml=target/build.xml, \
- target/configuration/config.ini=target/configuration/config.ini, \
- target/policy=target/policy, \
- target/keystore=target/keystore, \
- director/build.xml=director/build.xml, \
- director/configuration/config.ini=director/configuration/config.ini, \
- ${target-dir}/testcond.jar, \
- ${target-dir}/osgi.min.jar, \
- servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
- ${target-dir}/osgi.target.jar, \
- ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
- ${target-dir}/osgi.jar, \
- ${target-dir}/osgi.director.jar, \
- target/delivered=target/delivered, \
- director/core.script=director/core.script, \
- ${target-dir}/osgi.core.jar, \
- ${target-dir}/osgi.core.tests.jar, \
- doc/osgi.core.html=doc/osgi.core.html, \
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
- ../org.osgi.test.cases.signature/src
-
-
-
-# Core (JSR 291) RI
-include.osgi.jsr291.ri.zip= \
- [about.html=about.html], \
- LICENSE-RI=../licensed/licenses/EPL-1.0.txt, \
- NOTICE=NOTICE.txt, \
- ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
- ${target-dir}/osgi.core.impls.jar
 
 btool.sources=false
 
