--- a/osgi.test/director/build.xml
+++ b/osgi.test/director/build.xml
@@ -10,7 +10,7 @@
 	</target>	
 	
 	<target name="director" depends="clean">
-		<java fork="true" jar="../org.osgi.impl.framework.eclipse.jar">	
+		<java fork="true" jar="../generated/org.osgi.impl.framework.eclipse.jar">	
 			<jvmarg value="-Dosgi.install.area=file:"/>
 			<jvmarg value="-Dosgi.bundles=osgi.jar@start,servlet.jar@start,osgi.min.jar@start,osgi.director.jar@start"/>
 		</java>
@@ -49,11 +49,12 @@
 	</target>
 	
 	<target name="-run" depends="clean">		
-		<java fork="true" jar="../org.osgi.impl.framework.eclipse.jar">	
+		<java fork="true" jar="../generated/org.osgi.impl.framework.eclipse.jar">	
 			<jvmarg value="-Dorg.osgi.test.batch.script=${script}"/>
 			<jvmarg value="-Dorg.osgi.test.batch.out=${out}"/>
 			<jvmarg value="-Dosgi.install.area=file:"/>
-			<jvmarg value="-Dosgi.bundles=osgi.jar@start,servlet.jar@start,osgi.min.jar@start,osgi.director.jar@start,${tests}"/>
+			<jvmarg value="-Dosgi.bundles=../generated/osgi.jar@start,../generated/servlet.jar@start,../generated/osgi.min.jar@start,../generated/osgi.director.jar@start,${tests}"/>
+			<!-- <arg value="-console"/> -->
 		</java>
 	</target>
 </project>
