Added subpackages to core framework packages in osgi.core.jar

--- a/osgi/build.properties
+++ b/osgi/build.properties
@@ -3,7 +3,7 @@ bin.includes = ${p}.jar, ${p}.cmpn.jar, ${p}.core.jar, ${p}.mobile.jar
 
 expand.${p}.jar = ${replace;${specs};^.*$;[$0.*]}
 include.${p}.jar = about.html, \
-  LICENSE, \
+  LICENSE, \s
   xmlns/metatype=../xmlns/metatype, \
   xmlns/scr=../xmlns/scr, \
   xmlns/app=../xmlns/app
@@ -27,7 +27,7 @@ include.${p}.mobile.jar = about.html, \
   ddf=../ddf/mobile
 
 javadoc.core.packagenames = ${replace;${core.specs};^.*$;$0.*}
-expand.${p}.core.jar = ${replace;$(core.specs);.+;[$0]}
+expand.${p}.core.jar = ${replace;$(core.specs);.+;[$0.*]}
 include.${p}.core.jar = about.html, LICENSE
  
 custom = true
